unpackaged/main/default/objects/Action_Code__c/Action_Code__c.object-meta.xml
<CustomObject>
    <description>This custom object will hold the action codes related to actions.</description>
    <label>Action Code</label>
    <nameField>
        <label>Action Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>