unpackaged/main/default/objects/Action_Code__c/fields/Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Code__c</fullName>
    <externalId>true</externalId>
    <label>Action Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>