unpackaged/main/default/objects/Action_Code__c/listViews/All_Action_Codes.listView-meta.xml
<ListView>
    <fullName>All_Action_Codes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Action Codes</label>
</ListView>